# iAIDA

./: ChangeLog  Makefile.in  README.md  ReadMe  aida-config.in  configure
iAIDA/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.in  ReadMe  ReadMe.slc5  ReadMe.slc6  aida-config.in  configure
iAIDA/PyAIDA/dict/: AFCreator.h  BuildFile  CastConverter.h
iAIDA/PyAIDA/tests/: test_PyAIDA_b11.py  test_PyAIDA_b2.py  test_PyAIDA_b6.py  test_PyAIDA_b7.py  test_PyAIDA_tree.py  test_PyAIDA_tuple.py  to1.aida
iAIDA/PyAIDAProxy/dict/: BuildFile  initVector.h  selection.xml
iAIDA/PyAIDAProxy/examples/: fitHisto.html  fitHisto.py  hippoDemo.html  hippoDemo.py  howtosetup.html  jaidaDemo.html  prepare.csh  prepare.sh  readTree.html  readTree.py  readTuple.py  rootDemo.html  rootDemo2.py  tupleDemo.py  writeTuple.py
iAIDA/PyAIDAProxy/python/: AidaProxy.py  HistoCollector.py  HistoMerger.py  hippoPlotter.py  mergeHistos.py  rootPlotter.py  rootPlotter2.py
iAIDA/PyAIDAProxy/tests/: test_PyAIDAProxy_H1D.py
iAIDA/Scripts/: aida-config
iAIDA/UserFunctions/: BuildFile
iAIDA/UserFunctions/UserFunctions/: UserFunction.h
iAIDA/UserFunctions/cmt/: requirements
iAIDA/UserFunctions/dict/: BuildFile
iAIDA/UserFunctions/src/: PythonFunction.cpp  PythonFunction.h  UserFunction.cpp
iAIDA/UserFunctions/tests/: test_func.py  test_func_conv.py  test_func_fit.py  test_func_plot.py  test_functions.py
iAIDA/cmake/: FindAIDA.cmake  FindCERNLIB.cmake  FindGrace.cmake  FindROOT.cmake
iAIDA/examples/: .cvsignore  CMakeLists.txt  Makefile.in  convertTupleToCSV.cpp  exaH1.cpp  exaH2.cpp  exaH3.cpp  exaTree.cpp  exaTreeReader.cpp  exaTuple.cpp  exaTupleRead.cpp  readHbk.cpp  readHbkCWN.cpp  readHbkTup.cpp  readRoot.cpp  readRootTup.cpp  samplingFromHistogram.cpp  showAidaFile.cpp  storeHbk.cpp  storeHbkCWN.cpp  storeHbkTup.cpp  storeRootTup.cpp
iAIDA/ext/AIDA/: AIDA.h  IAnalysisFactory.h  IAnnotation.h  IAxis.h  IAxisStyle.h  IBaseHistogram.h  IBaseStyle.h  IBrushStyle.h  ICloud.h  ICloud1D.h  ICloud2D.h  ICloud3D.h  IConstants.h  IDataPoint.h  IDataPointSet.h  IDataPointSetFactory.h  IDataStyle.h  IFilter.h  IFitData.h  IFitFactory.h  IFitParameterSettings.h  IFitResult.h  IFunction.h  IFunctionCatalog.h  IFunctionFactory.h  IHistogram2D.h  IHistogram3D.h  IHistogramFactory.h  IInfo.h  IInfoStyle.h  ILineStyle.h  IManagedObject.h  IMeasurement.h  IModelFunction.h  IPlotterFactory.h  IPlotterLayout.h  IPlotterRegion.h  IPlotterStyle.h  IProfile.h  IProfile1D.h  (+7 more)
iAIDA/include/: .cvsignore
iAIDA/include/AIDA_Annotation/: AIDA_Annotation.h  AIDA_Annotation.inl
iAIDA/include/AIDA_CPP/: DummyAnnotation.h  DummyTree.h  Exceptions.h  GenFactory.h  HistogramFactory.h  IHistogram1D.h  IHistogram2D.h  IHistogram3D.h  IProfile1D.h  IProfile2D.h
iAIDA/include/AIDA_DataPointSet_native/: AIDA_DataPointSetFactory.h  AIDA_DevDataPointSetFactory.h
iAIDA/include/AIDA_Dev/: IAnnotationFactory.h  IBackingStore.h  IDataPointSetFactoryProvider.h  IDevAnalysisFactory.h  IDevCloud1D.h  IDevCloud2D.h  IDevCloud3D.h  IDevDataPointSet.h  IDevDataPointSetFactory.h  IDevEvaluatorFactory.h  IDevFilterFactory.h  IDevFitData.h  IDevFitDataIterator.h  IDevFitParameterSettings.h  IDevFitResult.h  IDevFitter.h  IDevFunction.h  IDevFunctionCatalog.h  IDevFunctionFactory.h  IDevHistogram1D.h  IDevHistogram2D.h  IDevHistogram3D.h  IDevHistogramFactory.h  IDevManagedObject.h  IDevModelFunction.h  IDevProfile1D.h  IDevProfile2D.h  IDevTree.h  IDevTuple.h  IFitFactoryProvider.h  IFunctionFactoryProvider.h  IHistogramFactoryProvider.h  IPlotterFactoryProvider.h  IStore.h  IStoreFactory.h  ITreeFactoryProvider.h  ITupleFactoryProvider.h  ITupleHeader.h  ITupleVariableDescription.h  ITupleVariableStatistics.h
iAIDA/include/AIDA_Fitter/: AIDA_FitFactory.h
iAIDA/include/AIDA_Function/: AIDA_DevFunctionFactory.h  AIDA_FunctionAdapter.h  AIDA_FunctionCatalog.h  AIDA_FunctionFactory.h  AIDA_RangeSet.h  FMLFunctionAdapter.h
iAIDA/include/AIDA_Histogram_native/: AIDA_DevHistogramFactory.h  AIDA_HistogramFactory.h
iAIDA/include/AIDA_MemoryStore/: IMemoryBackingStore.h  IMemoryPersistentTuple.h  MemoryBackingStore.h  MemoryPersistentTuple.h  MemoryTupleData.h
iAIDA/include/AIDA_Plugin/: AIDA_PluginFactory.h  AIDA_PluginInfo.h  AIDA_PluginLoader.h  AIDA_PluginType.h
iAIDA/include/AIDA_Tree/: AIDA_TreeFactory.h
iAIDA/include/AIDA_Tuple_native/: AIDA_DevEvaluatorFactory.h  AIDA_DevFilterFactory.h  AIDA_DevTupleFactory.h  AIDA_TupleFactory.h  IEvaluatorExpressionBase.h  IFilterExpressionBase.h
iAIDA/include/DataXML/: DataObject.h  XMLSealStream.h  XMLStream.h
iAIDA/include/FML/: Bound.h  CScalarFunction.h  CStandardFunction.h  Chi2FitMethod.h  CodeletStringParser.h  CompoundModelFunction.h  Contour.h  DataVector.h  DataVectorIterator.h  (+41 more)
iAIDA/src/: .cvsignore  AIDA_AnalysisFactory.cpp  AIDA_AnalysisFactory.h  AIDA_BaseHistogram.cpp  AIDA_BaseHistogram.h  AIDA_BaseHistogram.inl  AIDA_BoundedProfile1D.cpp  AIDA_BoundedProfile1D.h  AIDA_BoundedProfile2D.cpp  AIDA_BoundedProfile2D.h  AIDA_ChainedTuple.cpp  AIDA_ChainedTuple.h  AIDA_Cloud1D.cpp  AIDA_Cloud1D.h  AIDA_Cloud1DIterator.cpp  AIDA_Cloud1DIterator.h  AIDA_Cloud2D.cpp  AIDA_Cloud2D.h  AIDA_Cloud2DIterator.cpp  AIDA_Cloud2DIterator.h  AIDA_Cloud3D.cpp  AIDA_Cloud3DIterator.cpp  AIDA_Cloud3DIterator.h  AIDA_DataPoint.cpp  AIDA_DataPoint.h  AIDA_DataPoint.inl  AIDA_DataPointSet.h  AIDA_DataPointSetFactory.cpp  AIDA_DataPointSetIterator.cpp  AIDA_DataPointSetIterator.h  AIDA_DevDataPointSetFactory.cpp  AIDA_DevEvaluatorFactory.cpp  AIDA_DevFilterFactory.cpp  AIDA_DevFunctionFactory.cpp  AIDA_DevHistogramFactory.cpp  AIDA_DevTupleFactory.cpp  AIDA_Evaluator.cpp  AIDA_Evaluator.h  AIDA_Filter.cpp  AIDA_Filter.h  (+197 more)
iAIDA/tests/: .cvsignore  CMakeLists.txt  Makefile.in  fg4b134.out  plot.cpp  plottingHistograms.cpp  runTests.py.in  testAIDAmem.cpp  testHistoName.cpp  testTranslator.cpp  test_Cloud.cpp  test_histo_bug10170.py  writeClouds.cpp  writeHistos.cpp  writeTuple.cpp
iAIDA/utilities/: CMakeLists.txt  aida_convertToXML.cpp  aida_convertTupleToCSV.cpp  aida_showFile.cpp
(+599 files in other folders)
